--- a/index.ipynb
+++ b/index.ipynb
@@ -373,9 +373,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "total = 0\n",
     "for i in range(1, 11):\n",
@@ -448,6 +459,18 @@
    "metadata": {},
    "source": [
     "So by using sigma notation we can express the a summation more succinctly.  And in doing so, we can get more to the core of what we are trying to express."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = 0\n",
+    "for i in range(, 6):\n",
+    "    total += i\n",
+    "total"
    ]
   },
   {
