Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -468,8 +468,8 @@
    "outputs": [],
    "source": [
     "total = 0\n",
-    "for i in range(, 6):\n",
-    "    total += i\n",
+    "for i in range(0, 6):\n",
+    "    total += 5*i\n",
     "total"
    ]
   },
